--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,23 @@
 #server.servlet.context-path=/
 #server.port = 80
 
+spring.output.ansi.enabled=always
+
 logging.level.org.hibernate.SQL=DEBUG
 
 #\uc790\ub3d9 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/intranet
-spring.datasource.username=intra
-spring.datasource.password=intra123
+spring.datasource.url=jdbc:postgresql://192.168.1.18:5432/db_mindone
+spring.datasource.username=mindone
+spring.datasource.password=mindone123
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+
+#Encoding UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
+#jsp\uc5f0\ub3d9
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
