행정단어 목록까지

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.devtools.livereload.enabled=true
-#spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
 
 # \uc774\uc804\uc124\uc815
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
