--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,18 @@
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
-# \uc774\uc804\uc124\uc815
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.output.ansi.enabled=always
-#server.servlet.context-path=/
-#server.port = 80
+spring.jpa.properties.hibernate.format_sql=true 
 
-#spring.output.ansi.enabled=always
 
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 
 #\uc790\ub3d9 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-#spring.datasource.url=jdbc:postgresql://192.168.1.18:5432/db_mindone
-#spring.datasource.username=mindone
-#spring.datasource.password=mindone123
-spring.datasource.url=jdbc:postgresql://localhost:5432/intranet
-spring.datasource.username=intra
-spring.datasource.password=intra123
+spring.datasource.url=jdbc:postgresql://192.168.1.18:5432/db_mindone
+spring.datasource.username=mindone
+spring.datasource.password=mindone123
+#spring.datasource.url=jdbc:postgresql://localhost:5432/intranet
+#spring.datasource.username=intra
+#spring.datasource.password=intra123
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
