--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.devtools.restart.enabled=true
 spring.jpa.properties.hibernate.format_sql=true 
 
 
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
 #\uc790\ub3d9 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.datasource.url=jdbc:postgresql://192.168.1.18:5432/db_mindone
@@ -25,3 +25,6 @@ spring.http.encoding.force=true
 #jsp\uc5f0\ub3d9
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+# logging.level.{\ud328\ud0a4\uc9c0 \uacbd\ub85c}\ub97c \ud1b5\ud574 \ub85c\uae45 \ub808\ubca8\uc744 \uacb0\uc815\ud560 \uc218 \uc788\uc2b4
+logging.level.com.metasystem=DEBUG
