--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
-spring.jpa.properties.hibernate.format_sql=true 
 
 
-logging.level.org.hibernate.SQL=DEBUG
 
 #\uc790\ub3d9 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.datasource.url=jdbc:postgresql://192.168.1.18:5432/db_mindone
@@ -15,6 +13,7 @@ spring.datasource.password=mindone123
 #spring.datasource.password=intra123
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true 
 spring.jpa.hibernate.ddl-auto=none
 
 #Encoding UTF-8
@@ -27,4 +26,5 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 # logging.level.{\ud328\ud0a4\uc9c0 \uacbd\ub85c}\ub97c \ud1b5\ud574 \ub85c\uae45 \ub808\ubca8\uc744 \uacb0\uc815\ud560 \uc218 \uc788\uc2b4
-logging.level.com.metasystem=DEBUG
+logging.level.dicmeta.app=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
