--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.metasystem</groupId>
+	<groupId>dicmeta.app</groupId>
 	<artifactId>metasystem</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -16,7 +16,7 @@
 	<description>metasystem</description>
 	<properties>
 		<java.version>1.8</java.version>
-		<start-class>com.metasystem.MetasystemApplication</start-class>
+		<start-class>dicmeta.app.DicmetaApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,6 +68,13 @@
 		    <artifactId>postgresql</artifactId>
 		    <version>8.1-404.jdbc3</version>
 		</dependency>
+
+		<!-- OpenAPI3.0 : swagger3.0 -->
+		<dependency>
+	      <groupId>org.springdoc</groupId>
+	      <artifactId>springdoc-openapi-ui</artifactId>
+	      <version>1.4.6</version>
+	    </dependency>		
 		
 	</dependencies>
 
