--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<!-- <version>4.12</version> -->
 			<scope>test</scope>
 		</dependency>
 		
@@ -76,10 +76,51 @@
 	      <version>1.4.6</version>
 	    </dependency>		
 		
+		<!-- QueryDsl 설정 -->
+		<dependency>
+		  <groupId>com.querydsl</groupId>
+		  <artifactId>querydsl-apt</artifactId>
+		  <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		  <groupId>com.querydsl</groupId>
+		  <artifactId>querydsl-jpa</artifactId>
+		</dependency>
+		
+		<!-- commons-codec(Base64) 비밀번호 암호화 -->
+		<dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+		
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- querydsl start -->
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/generated-sources</outputDirectory>
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                            <options>
+								<querydsl.entityAccessors>true</querydsl.entityAccessors>
+							</options>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- querydsl end -->
+			
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
