--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>metasystem</finalName>
 		<defaultGoal>install</defaultGoal>
 		<plugins>
 			<!-- querydsl start -->
