--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
             <artifactId>poi</artifactId>
             <version>4.1.0</version>
         </dependency>
+
+		<dependency><!-- cache 비활성화 -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		
 	</dependencies>
 
